k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-nginx-service
  namespace: stag-ns
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: NodePort
