k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-nginx-ingress-prod
  namespace: prod-ns
  annotations:    
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: test.qubitera.com
    http:
      paths:
      - path: /argocd-nginx-prod
        pathType: Prefix
        backend:
          service:
           name: argocd-nginx-service
           port:
             number: 80
